--- a/Tema 8/codigo apoyo/ejemplo 2/index.html
+++ b/Tema 8/codigo apoyo/ejemplo 2/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ejemplo SCSS - Tarjeta de Actividad</title>
   <!-- Incluir el CSS generado a partir de main.scss -->
-  <!-- <link rel="stylesheet" href="tarjeta-actividad.css"> -->
+  <link rel="stylesheet" href="main.css">
 </head>
 <body>
   <div class="tarjeta-actividad">
